Ændringer i jail test så programmet kan køre, vi benytter ArrayList istedet for List.
Ændringer i Loaded cup: Vi har oprettet et private int kastIndex, som styrer hvor mange kast der er til rådighed mht. størrelsen af det der er kastet med terningnerne, dvs vi kan have faste terningekast for hver 2. spiller, men selve kastet loopes om og om igen med de værdier vi selv har valgt skal være terningekastet.