@@ -1,6 +1,8 @@
 import Controllers.GameController;
 import GameComponents.LoadedCup;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class JailTest {
@@ -9,7 +11,7 @@ public class JailTest {
     public static void main(String[] args) {
 
         GameController game = new GameController();
-        LoadedCup cup = new LoadedCup(List.of(new int[]{0, 2}, new int[]{3, 4}));
+        LoadedCup cup = new LoadedCup(new ArrayList<>(Arrays.asList(new int[]{15, 15}, new int[]{2, 2})));
         game.init();
         game.run(cup);
     }
